# RDex

./: README.md  settings.gradle
app/: build.gradle
app/libs/: com.camel.api_1.4.4.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: lurker_init
app/src/main/cpp/: CMakeLists.txt  DexUtil.cpp  DexUtil.h  Helper.h  Leb128.cpp  Leb128.h  Types.h  dexfile_art.h  dexfile_art_10.h  jvalue.h  log.h  native-lib.cpp
app/src/main/cpp/base/: macros.h
app/src/main/java/com/alien/rdex/: AppBean.java  Constants.java  HookEntry.java  JNILoadHelper.java  MainActivity.java  MainListViewAdapter.java  MultiprocessSharedPreferences.java  NativeDump.java  PermissionUtils.java  RootUtils.java  SpUtil.java  ThreadUtils.java  ToastUtils.java
app/src/main/java/com/alien/rdex/silk/hook_export/: ExportHooker.java  JsonHooker.java  OutBinderProxyHooker.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
